--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,143 @@
-body {
-    background: red;
+/* 
+   v2.0 | Reste
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
 }
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* 
+   v2.0 | Fonts
+*/
+
+
+/* Light */
+@font-face {
+    font-family: "Circular";
+    src: url("../fonts/CircularStd-Book.otf") format("opentype");
+    font-weight: 100;
+}
+
+/* Light */
+@font-face {
+    font-family: "Circular";
+    src: url("../fonts/CircularStd-Medium.otf") format("opentype");
+    font-weight: 300;
+}
+
+/*  Bold */
+@font-face {
+    font-family: "Circular";
+    src: url("../fonts/CircularStd-Bold.otf") format("opentype");
+    font-weight: 500;
+}
+
+/* Black */
+@font-face {
+    font-family: "Circular";
+    src: url("../fonts/CircularStd-Black.otf") format("opentype");
+    font-weight: 600;
+}
+
+
+/* 
+   v2.0 | Main styles
+*/
+body {
+    font-family: Circular !important;
+}
+
+
+/* 
+   v2.0 | Header
+*/
+header {
+    height: 100px;
+    background: white;
+    border-bottom: 1px solid #f5f5f5;
+    width: 100%;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#logo {
+    height: 60px;
+    padding-left: 30px;
+}
+
+.nav-holder{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.menu {
+    margin-right: 30px;
+}
+
+.menu li {
+    float: left;
+    margin-right: 50px;
+}
+
+.menu a {
+    text-decoration: none;
+    color: #333;
+}
+
+.icons{
+    height: 100px;
+    width: 200px;
+    background:#f5f5f5;
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+/* 
+   v2.0 | Body
+*/
+
