--- a/styles/style.css
+++ b/styles/style.css
@@ -102,13 +102,13 @@ html {
  
 @media (max-width: 1000px){
     html{
-        font-size: 8px;
+        font-size: 9px;
     }
 }
  
 @media (min-width: 1200px){
     html{
-        font-size: 13px;
+        font-size: 11px;
     }
 }
 body {
@@ -153,13 +153,14 @@ header {
 .menu a {
     text-decoration: none;
     color: #333;
+    font-size: 1.3rem;
 }
 
 .icons{
     height: 10rem;
     width: 20rem;
     background:#f5f5f5;
-
+    font-size: 1.3rem;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -189,7 +190,7 @@ article h1{
     font-size: 6.6rem;
     font-weight: 600;
     width: auto;
-    margin-left: 10rem;
+    margin-left: 3rem;
     position: relative;
     z-index: 99;
 }
