--- a/styles/style.css
+++ b/styles/style.css
@@ -108,7 +108,12 @@ html {
  
 @media (min-width: 1200px){
     html{
-        font-size: 11px;
+        font-size: 10px;
+    }
+}
+@media (min-width: 1400px){
+    html{
+        font-size: 8px;
     }
 }
 body {
