--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -1,35 +1,41 @@
-@import "reset";
-@import "font";
+@charset 'UTF-8';
 
-/* 
-   v2.0 | Variables
-*/
+// 1. Configuration and helpers
+@import
+  'abstracts/variables',
+  'abstracts/functions',
+  'abstracts/mixins';
 
-$font_face: Circular !important;
-$dark: #333333;
-$white: #ffffff;
-$grey_light: #f5f5f5;
-$red: #ff0000;
+// 2. Vendors
+@import
+  'vendor/normalize';
 
-/* 
-   v2.0 | Mixins
-*/
+// 3. Base stuff
+@import
+  'base/base',
+  'base/fonts',
+  'base/typography',
+  'base/helpers',
+  'base/reset';
 
-@mixin flex($flex_direction, $justify_content, $align_items) {
-  align-items: $align_items;
-  display: flex;
-  flex-direction: $flex_direction;
-  justify-content: $justify_content;
-}
+// 4. Layout-related sections
+@import
+  'layout/header',
+  'layout/footer';
 
-/* 
-   v2.0 | Main styles
-*/
+// 5. Components
+@import
+  'components/button';
 
-html {
-  font-size: 10px;
-  transition: 0.5s;
-}
+// 6. Page-specific styles
+@import
+  'pages/home';
+
+// 7. Themes
+@import
+  'themes/default';
+
+
 
 @media (max-width: 1000px) {
   html {
@@ -45,177 +51,5 @@ html {
 @media (min-width: 1400px) {
   html {
     font-size: 8px;
-  }
-}
-
-body {
-  font-family: $font_face;
-}
-
-/* 
-   v2.0 | Header
-*/
-.head {
-  height: 10rem;
-  background: $white;
-  border-bottom: 0.1rem solid $grey_light;
-  width: 100%;
-
-  @include flex(row, space-between, center);
-
-  &__logo {
-    width: 18rem;
-    padding-left: 3rem;
-  }
-
-  &__menu {
-    @include flex(row, space-between, center);
-  }
-}
-
-.menu {
-  &__item {
-    float: left;
-    margin-right: 5rem;
-  }
-
-  &__link {
-    text-decoration: none;
-    color: $dark;
-    font-size: 1.3rem;
-  }
-
-  &--icon {
-    margin-left: 1.5rem;
-    height: 10rem;
-    width: 20rem;
-    background: $grey_light;
-    font-size: 1.3rem;
-    @include flex(row, space-around, center);
-  }
-}
-
-.page {
-  display: flex;
-  flex-direction: row;
-
-  &__article {
-    width: 35%;
-    min-width: 300px;
-    height: 75vh;
-
-    @include flex(column, center, center);
-  }
-
-  &__slider {
-    width: 65%;
-    height: 75vh;
-    background-image: url("../img/main.jpeg");
-    background-position: center;
-    background-size: cover;
-    position: relative;
-  }
-}
-
-.article {
-  &__logo {
-    padding: 4rem;
-    font-size: 6.6rem;
-    font-weight: 600;
-    width: auto;
-    margin-left: 3rem;
-    position: relative;
-    z-index: 99;
-  }
-
-  &__description {
-    width: 60%;
-    margin: 3rem auto;
-    background: $red;
-
-    @include flex(row, center, center);
-  }
-}
-
-.logo {
-  &__text {
-    display: block;
-
-    &--lg {
-      font-family: "K2D";
-      font-weight: 900;
-      font-size: 19.9rem;
-      transform: translateX(20.5rem);
-      color: rgba($red, 0.938);
-      z-index: 999999;
-      position: relative;
-    }
-  }
-}
-
-.description {
-  &__number {
-    padding: 4rem;
-
-    span {
-      font-size: 2rem;
-    }
-  }
-
-  &__text {
-    padding: 1.5rem;
-    font-size: 1.4rem;
-  }
-}
-
-.slider {
-  &__arrows {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-  }
-
-  &__item {
-    padding: 5.5rem;
-    color: white;
-    cursor: pointer;
-    background-color: rgba($grey_light, 0.473);
-    font-size: 2rem;
-
-    &:first-child {
-      background: rgba($red, 0.938);
-    }
-
-    &:last-child {
-      background: rgba($red, 0.274);
-      transform: translateX(-0.3rem);
-    }
-  }
-}
-
-@media (max-width: 876px) {
-  .page {
-    flex-direction: column-reverse;
-  }
-
-  .page__slider {
-    width: 100%;
-    height: 50vh;
-  }
-
-  .menu {
-    display: none;
-  }
-
-  .page__article {
-    width: 100%;
-  }
-
-  .logo {
-    margin: 0;
-
-    &__text:last-child {
-      transform: translateX(0px);
-    }
   }
 }
