--- a/styles/scss/abstracts/_mixins.scss
+++ b/styles/scss/abstracts/_mixins.scss
@@ -42,6 +42,6 @@ breakponit arguement choices:
       @media (max-width: 75em) { @content }; // 1200px
   }
   @if $breakpoint == big-desktop {
-      @media (max-width: 112.5em) { @content }; // 1800+ px
+      @media (min-width: 125em) { @content }; // 2000 + px
   }
 }
