--- a/styles/scss/base/_reset.scss
+++ b/styles/scss/base/_reset.scss
@@ -1,6 +1,7 @@
-/* 
-   v2.0 | Reste
-*/
+body {
+  margin: 0;
+  padding: 0;
+}
 
 html,
 body,
@@ -86,8 +87,6 @@ video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
-  font: inherit;
   vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
