--- a/styles/scss/layout/_header.scss
+++ b/styles/scss/layout/_header.scss
@@ -41,4 +41,8 @@
       font-size: 1.3rem;
       @include flex(row, space-around, center);
     }
+
+    @include respond(tab-port){
+      display: none;
+    }
   }
